# fastapi-monorepo

./: .gitignore  .pre-commit-config.yaml  docker-compose.yml  pyproject.toml  readme.md
api-gateway/: .env.docker  .env.example  Dockerfile  docker-compose.yml  prometheus.yml  promtail-config.yaml  requirements.txt
api-gateway/alembic/versions/: 1b92895bf5d6_user_add_nullable_to_first_name_and_.py  abb51cfc20d7_add_user.py
api-gateway/api/: main.py
api-gateway/api/dependencies/: current_user.py  grpc.py  services.py
api-gateway/api/exceptions/: exception_handlers.py
api-gateway/api/router/: auth.py  v1.py
api-gateway/api/routers/: auth.py  health.py  media.py  user.py  v1.py
api-gateway/api/schemas/: auth.py  user.py
api-gateway/app/: repository.py
api-gateway/app/core/: settings.py  setup.py
api-gateway/app/exceptions/: custom_exceptions.py
api-gateway/app/schemas/: auth.py  base.py  health.py  media.py  user.py
api-gateway/app/services/: health_service.py
api-gateway/app/utils/: jwt.py
api-gateway/certs/: jwt-public.pem
api-gateway/grafana/: datasources.yml
api-gateway/proto/auth/: auth.proto  auth_pb2.py  auth_pb2.pyi  auth_pb2_grpc.py  user.proto  user_pb2.py  user_pb2.pyi  user_pb2_grpc.py
api-gateway/proto/media/: media.proto  media_pb2.py  media_pb2_grpc.py
api-gateway/proto/user/: user_pb2.pyi  user_pb2_grpc.py
auth_service/: .env.docker  .env.example  Dockerfile  docker-compose.yml  main.py  prometheus.yml  promtail-config.yaml  requirements.txt
auth_service/alembic/: env.py
auth_service/alembic/versions/: 0b028eda0ed7_add_outbox_messages_table_for_message_.py  1c17399aa48d_auth_add_username_and_emal_field_delete_.py  4d96892678d8_add_auth.py  b011b40cc98b_auth_add_index_to_username_and_email_.py
auth_service/api/: main.py
auth_service/api/dependencies/: current_user.py  services.py
auth_service/api/exceptions/: exception_handlers.py
auth_service/app/: repository.py
auth_service/certs/: jwt-private.pem
auth_service/proto/: auth.proto  auth_pb2.py  auth_pb2.pyi  auth_pb2_grpc.py
auth_service/rpc/: main.py  metrics.py
auth_service/tests/: conftest.py  factories.py  test_auth.py
media_service/: .env.docker  .env.example  docker-compose.yml  main.py  requirements.txt
media_service/alembic/: env.py
media_service/api/: main.py
media_service/app/: repository.py
media_service/proto/: media_pb2.py  media_pb2.pyi  media_pb2_grpc.py
media_service/rpc/: main.py
media_service/tests/: __init__.py  conftest.py  docker-compose.yml  test_media.py  utils.py
user_service/: .env.docker  .env.example  docker-compose.yml  main.py
user_service/alembic/: env.py
user_service/app/: repository.py  service.py
user_service/proto/: user.proto  user_pb2.py  user_pb2_grpc.py
user_service/rpc/: main.py
user_service/tests/: conftest.py  docker-compose.yml  factories.py  test_user.py
(+96 files in other folders)
